Updated to run on JDK 8. Fast tests pass.